bootstapped the profile page

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.0",
