--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-apollo-graphql-mongo",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node":"16.17.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
