--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-apollo-graphql-mongo",
   "version": "1.0.0",
   "engines": {
-    "node": "16.17.0"
+    "node": "16.17.0",
+    "npm": "8.15.0"
   },
   "description": "",
   "main": "index.js",
