--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines":
+    {
+      "node": "16.17.0"
+    },
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run dev\" \"cd client && npm start\"",
